--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Play MasterMind Game in browser. Web site created using react redux"
+      content="Play MasterMind Game in browser."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
